<resources>

    <string name="app_name">VSM</string>
    <string name="today">今日</string>
    <string name="plan">计划</string>
    <string name="user">我的</string>
    <string name="schedule">计划表</string>

    <string name="datescroller_sunday">星期日</string>
    <string name="datescroller_monday">星期一</string>
    <string name="datescroller_tuseday">星期二</string>
    <string name="datescroller_wednesday">星期三</string>
    <string name="datescroller_thursday">星期四</string>
    <string name="datescroller_friday">星期五</string>
    <string name="datescroller_saturday">星期六</string>
    <string name="datescroller_today">今天</string>
    <string name="datescroller_year">%d年</string>
    <string-array name="datescroller_month_array">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>

    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <!--标题-->
    <string name="title_user_data">个人资料</string>
    <string name="title_add_schedule">添加日程</string>
    <string name="title_add_plan">添加计划</string>
    <!--控件备注-->
    <string name="explain_back">返回上一个页面</string>
    <string name="explain_show_head">显示头像</string>
    <string name="explain_able_modify">可修改</string>
    <string name="explain_icon">图标</string>
    <string name="explain_plan_type">计划种类图标</string>
    <string name="explain_bg_up">背景上半部分</string>
    <string name="explain_bg_down">背景下半部分</string>
    <!--用户-->
    <string name="user_name_default">昵称</string>
    <string name="user_sign_default">编辑个性签名</string>
    <string name="user_sex_secrecy">保密</string>
    <string name="user_head">头像</string>
    <string name="user_id">id</string>
    <string name="user_name">昵称</string>
    <string name="user_email">邮件</string>
    <string name="user_sex">性别</string>
    <string name="user_sign">个性签名</string>
    <string name="user_pwd">密码</string>
    <string name="user_modify_pwd">点击修改密码</string>
    <string name="user_save">保存</string>
    <!--添加日程-->
    <string name="schedule_reminder_time">提醒时间</string>
    <!--添加计划-->
    <string name="plan_content_1">有计划的生活即使紧张，却井然有序。</string>
    <string name="plan_content_2">有计划的工作即使繁忙，却高效充实。</string>
    <string name="plan_type_1">看书</string>
    <string name="plan_type_2">打球</string>
    <string name="plan_type_3">看病</string>
    <string name="plan_type_4">学习</string>
    <string name="plan_type_5">绘画</string>
    <string name="plan_type_6">健身</string>
    <string name="plan_type_7">喝水</string>
    <string name="plan_type_8">不添加</string>

</resources>
