<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddPlanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/themeColor"
            android:contentDescription="@string/explain_bg_up" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@color/themeBgColor"
            android:contentDescription="@string/explain_bg_down" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageButton
                android:id="@+id/ib_login_finish"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:background="@drawable/white_left"
                android:contentDescription="@string/explain_back" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_add_plan"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/schedule"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/plan_content_1"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/plan_content_2"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shape_datescroller_bg"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_plan_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/book"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_type_1" />

                <TextView
                    android:id="@+id/tv_plan_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/play_ball"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_type_2" />

                <TextView
                    android:id="@+id/tv_plan_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/doctor"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_type_3" />

                <TextView
                    android:id="@+id/tv_plan_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/eg_study"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_type_4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tv_plan_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/painting"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_type_5" />

                <TextView
                    android:id="@+id/tv_plan_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/run"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_type_6" />

                <TextView
                    android:id="@+id/tv_plan_7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/water"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_type_7" />

                <TextView
                    android:id="@+id/tv_plan_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/add_item"
                    android:gravity="center_horizontal"
                    android:text="@string/plan_type_8" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>