<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view_division" />

    <View
        android:id="@+id/view_division"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/ll_bottom"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_main_today"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/today"
            android:textColor="@drawable/tab_color_selector"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_main_plan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/plan"
            android:textColor="@drawable/tab_color_selector"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_main_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/user"
            android:textColor="@drawable/tab_color_selector"
            android:textSize="10sp" />

    </LinearLayout>
</RelativeLayout>