<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeBgColor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/themeColor">

            <ImageButton
                android:id="@+id/ib_user_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:background="@drawable/white_left"
                android:contentDescription="@string/explain_back" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_user_data"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@+id/iv_head_change"
                android:gravity="center_vertical"
                android:text="@string/user_head"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/iv_head_change"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:layout_toStartOf="@+id/iv_head_right"
                android:contentDescription="@string/explain_show_head" />

            <ImageView
                android:id="@+id/iv_head_right"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_right"
                android:contentDescription="@string/explain_able_modify" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@+id/tv_id_change"
                android:gravity="center_vertical"
                android:text="@string/user_id"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_id_change"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="9dp"
                android:gravity="center_vertical|end"
                android:text=""
                android:textColor="@color/grey" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@+id/tv_name_change"
                android:gravity="center_vertical"
                android:text="@string/user_name"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_name_change"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="9dp"
                android:gravity="center_vertical|end"
                android:text=""
                android:textColor="@color/grey" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@+id/tv_email_change"
                android:gravity="center_vertical"
                android:text="@string/user_email"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_email_change"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="9dp"
                android:layout_toStartOf="@+id/iv_email_right"
                android:gravity="center_vertical|end"
                android:text=""
                android:textColor="@color/grey" />

            <ImageView
                android:id="@+id/iv_email_right"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_right"
                android:contentDescription="@string/explain_able_modify" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@+id/tv_sex_change"
                android:gravity="center_vertical"
                android:text="@string/user_sex"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_sex_change"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="9dp"
                android:layout_toStartOf="@+id/iv_sex_right"
                android:gravity="center_vertical|end"
                android:text=""
                android:textColor="@color/grey" />

            <ImageView
                android:id="@+id/iv_sex_right"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_right"
                android:contentDescription="@string/explain_able_modify" />
        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@+id/tv_sign_change"
                android:gravity="center_vertical"
                android:text="@string/user_sign"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_sign_change"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="9dp"
                android:layout_toStartOf="@+id/iv_sign_right"
                android:gravity="center_vertical|end"
                android:text=""
                android:textColor="@color/grey" />

            <ImageView
                android:id="@+id/iv_sign_right"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_right"
                android:contentDescription="@string/explain_able_modify" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_toStartOf="@+id/tv_pwd_change"
                android:gravity="center_vertical"
                android:text="@string/user_pwd"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_pwd_change"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="9dp"
                android:layout_toStartOf="@+id/iv_pwd_right"
                android:gravity="center_vertical|end"
                android:text=""
                android:textColor="@color/grey" />

            <ImageView
                android:id="@+id/iv_pwd_right"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/back_right"
                android:contentDescription="@string/explain_able_modify" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/bg_save"
            android:gravity="center"
            android:text="@string/user_save"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>